--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://www.fno.org/grazing1.html">Grazing the Net (1994)</a>
+                                    <a href="https://www.theguardian.com/us-news/2018/jun/02/las-vegas-workers-strike-automation-casinos">Vegas Workers to Strike Over Automation</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17306938">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17305929">
                                         
-                                            3 comments
+                                            2 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=mverwijs">mverwijs</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528923940"
+                                            href="https://news.ycombinator.com/user?id=chasedehan">chasedehan</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528915700"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    12 points
+                                    14 points
                                 </span>
                             </td>
                         </tr>
@@ -489,7 +489,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528993207" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528993807" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
