--- a/top_stories/week/page6.html
+++ b/top_stories/week/page6.html
@@ -407,17 +407,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://pfrazee.hashbase.io/blog/dat-and-servers">How do dat:// sites interact with servers?</a>
+                                    <a href="http://discrete.gr/complexity/">A Gentle Introduction to Algorithm Complexity Analysis</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17295226">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17301224">
                                         
-                                            54 comments
+                                            6 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=pfraze">pfraze</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528822677"
+                                            href="https://news.ycombinator.com/user?id=ColinWright">ColinWright</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528877378"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     201 points
                                 </span>
@@ -431,17 +431,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://medium.com/dailyjs/how-i-automated-my-job-with-node-js-94bf4e423017">How I Automated My Job</a>
+                                    <a href="https://pfrazee.hashbase.io/blog/dat-and-servers">How do dat:// sites interact with servers?</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17265458">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17295226">
                                         
-                                            79 comments
+                                            54 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=codingcoop">codingcoop</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528466591"
+                                            href="https://news.ycombinator.com/user?id=pfraze">pfraze</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528822677"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     201 points
                                 </span>
@@ -489,7 +489,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528995606" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528996208" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
