--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://github.com/xo/usql">Usql – Universal command-line interface for SQL databases</a>
+                                    <a href="https://gitlab.com">Gitlab 500 error</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17310568">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17295027">
                                         
-                                            34 comments
+                                            116 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=pjf">pjf</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528971104"
+                                            href="https://news.ycombinator.com/user?id=sbhn">sbhn</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528821680"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    118 points
+                                    119 points
                                 </span>
                             </td>
                         </tr>
@@ -489,7 +489,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528997409" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528998010" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
