--- a/top_stories/week/index.html
+++ b/top_stories/week/index.html
@@ -113,9 +113,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17286770" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17291269" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="http://dinosaurpictures.org/ancient-earth">Plot modern addresses on Earth 240M years ago</a>
+                                    <a href="https://abau.org/dilay/">Dilay – A free 3D sculpting application</a>
                                 </span>
                             </td>
                         </tr>
@@ -127,9 +127,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17291269" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17305381" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://abau.org/dilay/">Dilay – A free 3D sculpting application</a>
+                                    <a href="https://github.com/getICO/node-android">Node-android – Run Node.js on Android</a>
                                 </span>
                             </td>
                         </tr>
@@ -515,7 +515,7 @@
                                             href="https://news.ycombinator.com/user?id=bane">bane</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528848683"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    502 points
+                                    503 points
                                 </span>
                             </td>
                         </tr>
@@ -557,7 +557,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17289449">
                                         
-                                            338 comments
+                                            339 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=jseliger">jseliger</a></strong> &nbsp;•&nbsp;
@@ -606,7 +606,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528999208" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528999807" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
