--- a/top_stories/week/page1.html
+++ b/top_stories/week/page1.html
@@ -113,9 +113,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17286770" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17291269" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="http://dinosaurpictures.org/ancient-earth">Plot modern addresses on Earth 240M years ago</a>
+                                    <a href="https://abau.org/dilay/">Dilay – A free 3D sculpting application</a>
                                 </span>
                             </td>
                         </tr>
@@ -127,9 +127,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17291269" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17305381" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://abau.org/dilay/">Dilay – A free 3D sculpting application</a>
+                                    <a href="https://github.com/getICO/node-android">Node-android – Run Node.js on Android</a>
                                 </span>
                             </td>
                         </tr>
@@ -299,7 +299,7 @@
                                             href="https://news.ycombinator.com/user?id=fermigier">fermigier</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528743459"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    411 points
+                                    412 points
                                 </span>
                             </td>
                         </tr>
@@ -323,7 +323,7 @@
                                             href="https://news.ycombinator.com/user?id=zwentz">zwentz</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528936128"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    409 points
+                                    410 points
                                 </span>
                             </td>
                         </tr>
@@ -347,7 +347,7 @@
                                             href="https://news.ycombinator.com/user?id=mromaine">mromaine</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528952781"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    403 points
+                                    405 points
                                 </span>
                             </td>
                         </tr>
@@ -461,13 +461,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17302301">
                                         
-                                            265 comments
+                                            266 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=ilamont">ilamont</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528891789"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    372 points
+                                    373 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528999208" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528999807" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
