--- a/top_stories/week/page6.html
+++ b/top_stories/week/page6.html
@@ -431,17 +431,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://pfrazee.hashbase.io/blog/dat-and-servers">How do dat:// sites interact with servers?</a>
+                                    <a href="https://www.hussmanfunds.com/comment/mc180604/">Hallmark of an Economic Ponzi Scheme</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17295226">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17309429">
                                         
-                                            54 comments
+                                            96 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=pfraze">pfraze</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528822677"
+                                            href="https://news.ycombinator.com/user?id=yuhong">yuhong</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528952630"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     201 points
                                 </span>
@@ -489,7 +489,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1529001606" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1529002209" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
