--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -215,6 +215,30 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="http://filestore.nationalarchives.gov.uk/pdfs/small/cab-66-7-wp-40-168-48.pdf">British strategy in a certain eventuality (1940) [pdf]</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17308457">
+                                        
+                                            4 comments
+                                        </a> &nbsp;•&nbsp;
+                                    <strong><a
+                                            href="https://news.ycombinator.com/user?id=gballan">gballan</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528938643"
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
+                                    12 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://github.com/thomasschmied/Speech_Recognition_with_Tensorflow">Speech Recognition with Tensorflow</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -465,7 +489,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1529004008" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1529004608" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
