--- a/top_stories/week/page3.html
+++ b/top_stories/week/page3.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://www.dailycamera.com/news/boulder/ci_31941127/public-support-high-boulder-moves-fund-citywide-fiber?source=mostpopular">Boulder moves to fund citywide fiber buildout through debt</a>
+                                    <a href="https://www.destroyallsoftware.com/blog/2017/the-biggest-and-weirdest-commits-in-linux-kernel-git-history">The Biggest and Weirdest Commits in Linux Kernel Git History (2017)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17311620">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17265151">
                                         
-                                            171 comments
+                                            75 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=crunchlibrarian">crunchlibrarian</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528983975"
+                                            href="https://news.ycombinator.com/user?id=swsieber">swsieber</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528464958"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    324 points
+                                    325 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1529005808" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1529006411" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
