--- a/top_stories/daily/page4.html
+++ b/top_stories/daily/page4.html
@@ -269,7 +269,7 @@
                                             href="https://news.ycombinator.com/user?id=ynot269">ynot269</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1529091578"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    12 points
+                                    13 points
                                 </span>
                             </td>
                         </tr>
@@ -289,7 +289,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17324633">
                                         
-                                            comments
+                                            1 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=velmu">velmu</a></strong> &nbsp;•&nbsp;
@@ -578,7 +578,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1529117407" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1529118010" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
