--- a/top_ask/page1.html
+++ b/top_ask/page1.html
@@ -338,7 +338,7 @@
                             <td width="auto" valign="middle">
                                 <span class="item_title">
                                     
-                                    <a href=" https://news.ycombinator.com/item?id=17325203 ">Can you recommend any ML paper/blogs for visual art detection?</a>
+                                    <a href=" https://news.ycombinator.com/item?id=17325203 ">Can you recommend any ML papers or blogs for visual art detection?</a>
                                     
                                 </span>
                                 <div class="sep5"></div>
@@ -554,7 +554,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1529133609" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1529134208" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
