--- a/jobs/index.html
+++ b/jobs/index.html
@@ -130,7 +130,7 @@
                             <td width="auto" valign="middle">
                                 <span class="item_title">
                                     
-                                    <a href=" https://bitmovin.com/careers/?gh_jid=4037364002 ">Bitmovin (YC S15) Is Hiring a Head of Design in San Francisco/Chicago/Berlin/etc</a>
+                                    <a href=" https://bitmovin.com/careers/?gh_jid=4037364002 ">Bitmovin (YC S15) Is Hiring a Head of Design</a>
                                     
                                 </span>
                                 <div class="sep5"></div>
@@ -549,7 +549,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1529163609" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1529164209" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
