--- a/jobs/index.html
+++ b/jobs/index.html
@@ -130,7 +130,7 @@
                             <td width="auto" valign="middle">
                                 <span class="item_title">
                                     
-                                    <a href=" http://www.irisonboard.com/careers/ ">Iris Automation Hiring Robotics Software Engineer – Autonomous Vehicles</a>
+                                    <a href=" http://www.irisonboard.com/careers/ ">Iris Automation Hiring Robotics Software Engineer to Work on Autonomous Vehicles</a>
                                     
                                 </span>
                                 <div class="sep5"></div>
@@ -549,7 +549,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1529178610" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1529179210" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
