--- a/top_shows/index.html
+++ b/top_shows/index.html
@@ -137,7 +137,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17329213">
                                         
-                                            comments
+                                            1 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=hursey013">hursey013</a></strong> &nbsp;•&nbsp;
@@ -549,7 +549,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1529185807" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1529186413" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
