--- a/top_shows/index.html
+++ b/top_shows/index.html
@@ -143,7 +143,7 @@
                                             href="https://news.ycombinator.com/user?id=gameswithgo">gameswithgo</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1529252954"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    8 points
+                                    9 points
                                 </span>
                             </td>
                         </tr>
@@ -163,13 +163,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17332797">
                                         
-                                            comments
+                                            1 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=kenforthewin">kenforthewin</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1529249912"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    5 points
+                                    6 points
                                 </span>
                             </td>
                         </tr>
@@ -549,7 +549,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1529257807" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1529258410" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
