--- a/jobs/index.html
+++ b/jobs/index.html
@@ -130,7 +130,7 @@
                             <td width="auto" valign="middle">
                                 <span class="item_title">
                                     
-                                    <a href=" https://news.ycombinator.com/item?id=17340618 ">Meshes, SDFs, Differential Geometry? We’re Hiring at Standard Cyborg</a>
+                                    <a href=" https://news.ycombinator.com/item?id=17340618 ">Meshes, SDFs, Differential Geometry? We’re Hiring at Standard Cyborg (YC W15)</a>
                                     
                                 </span>
                                 <div class="sep5"></div>
@@ -549,7 +549,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1529348409" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1529349009" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
