--- a/top_shows/index.html
+++ b/top_shows/index.html
@@ -143,7 +143,7 @@
                                             href="https://news.ycombinator.com/user?id=Sarcadass">Sarcadass</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1529330680"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    30 points
+                                    31 points
                                 </span>
                             </td>
                         </tr>
@@ -345,7 +345,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17335701">
                                         
-                                            comments
+                                            1 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=shamdasani">shamdasani</a></strong> &nbsp;•&nbsp;
@@ -549,7 +549,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1529356212" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1529356811" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
