--- a/top_shows/index.html
+++ b/top_shows/index.html
@@ -143,7 +143,7 @@
                                             href="https://news.ycombinator.com/user?id=arasatasaygin">arasatasaygin</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1529392570"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    632 points
+                                    634 points
                                 </span>
                             </td>
                         </tr>
@@ -189,13 +189,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17351930">
                                         
-                                            comments
+                                            1 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=finfun234">finfun234</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1529460124"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    10 points
+                                    11 points
                                 </span>
                             </td>
                         </tr>
@@ -549,7 +549,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1529474408" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1529475014" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
