--- a/top_shows/page1.html
+++ b/top_shows/page1.html
@@ -137,13 +137,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17363496">
                                         
-                                            comments
+                                            1 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=wheresvic1">wheresvic1</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1529574212"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    5 points
+                                    6 points
                                 </span>
                             </td>
                         </tr>
@@ -554,7 +554,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1529621409" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1529622009" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
