--- a/jobs/index.html
+++ b/jobs/index.html
@@ -130,7 +130,7 @@
                             <td width="auto" valign="middle">
                                 <span class="item_title">
                                     
-                                    <a href=" https://clever.com/about/jobs/software-engineer#gh_jid=5889 ">Hiring engineers to help change education at  Clever (YC S12)</a>
+                                    <a href=" https://clever.com/about/jobs/software-engineer#gh_jid=5889 ">Clever (YC S12) is hiring engineers to help change education</a>
                                     
                                 </span>
                                 <div class="sep5"></div>
@@ -549,7 +549,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1529640609" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1529641211" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
