--- a/jobs/index.html
+++ b/jobs/index.html
@@ -130,7 +130,7 @@
                             <td width="auto" valign="middle">
                                 <span class="item_title">
                                     
-                                    <a href=" http://www.irisonboard.com/careers/ ">Computer Vision Engineer for Self-Flying Drones at Iris Automation</a>
+                                    <a href=" http://www.irisonboard.com/careers/ ">Iris Automation Is Hiring a Computer Vision Engineer for Self-Flying Drones</a>
                                     
                                 </span>
                                 <div class="sep5"></div>
@@ -549,7 +549,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1529784010" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1529784608" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
