--- a/top_stories/daily/page4.html
+++ b/top_stories/daily/page4.html
@@ -445,7 +445,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17378378">
                                         
-                                            comments
+                                            2 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=rmason">rmason</a></strong> &nbsp;•&nbsp;
@@ -578,7 +578,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1529791808" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1529792409" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
