--- a/jobs/index.html
+++ b/jobs/index.html
@@ -130,7 +130,7 @@
                             <td width="auto" valign="middle">
                                 <span class="item_title">
                                     
-                                    <a href=" https://www.streak.com/careers#BackendEngineer ">Streak Is Hiring Experienced Back End Engineers in  SF (YC S11)</a>
+                                    <a href=" https://www.streak.com/careers#BackendEngineer ">Streak (YC S11) Is Hiring Experienced Back-End Engineers in SF</a>
                                     
                                 </span>
                                 <div class="sep5"></div>
@@ -549,7 +549,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1529797812" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1529798410" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
