--- a/jobs/index.html
+++ b/jobs/index.html
@@ -130,7 +130,7 @@
                             <td width="auto" valign="middle">
                                 <span class="item_title">
                                     
-                                    <a href=" https://jobs.lever.co/simplehabit/372cf651-1ba0-4eea-88df-6eaf54fba98d?lever-origin=applied&lever-source%5B%5D=Hackernews ">Simple Habit is hiring our 2nd Product Designer</a>
+                                    <a href=" https://jobs.lever.co/simplehabit/372cf651-1ba0-4eea-88df-6eaf54fba98d?lever-origin=applied&lever-source%5B%5D=Hackernews ">Simple Habit is hiring our second product designer</a>
                                     
                                 </span>
                                 <div class="sep5"></div>
@@ -549,7 +549,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1529868007" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1529868610" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
