--- a/top-stories/daily/page6.html
+++ b/top-stories/daily/page6.html
@@ -240,13 +240,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17392259">
                                         
-                                            comments
+                                            1 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=alberict">alberict</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1529933642"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    8 points
+                                    9 points
                                 </span>
                             </td>
                         </tr>
@@ -342,7 +342,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1529989211" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1529989810" id="pageUpdateTimestamp"></strong>
         </div>
         <div style="height: 100px; width: 100%;">
         </div>
