--- a/jobs/index.html
+++ b/jobs/index.html
@@ -10,7 +10,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="mobile-web-app-capable" content="yes"/>
     <title>Heikers - trending topics among the tech community and hackers</title>
-    <meta name="Description" CONTENT="EasyPost is hiring everyone. Quartzy (YC S11) Is Hiring Software Engineers (Palo Alto / Remote-US). iCracked (YC W12) Is Looking for Lead Full Stack Eng in New SF Office. Py (YC S17) Hiring Engineer #1. Tab (YC W15) is hiring full-stack software developers in London. One Codex is hiring front end engineers to build its microbiome data platform">
+    <meta name="Description" CONTENT="EasyPost is hiring. Quartzy (YC S11) Is Hiring Software Engineers (Palo Alto / Remote-US). iCracked (YC W12) Is Looking for Lead Full Stack Eng in New SF Office. Py (YC S17) Hiring Engineer #1. Tab (YC W15) is hiring full-stack software developers in London. One Codex is hiring front end engineers to build its microbiome data platform">
     <meta name="keywords" content="hackers, heikers, startup, venture capital, entrepreneur and entrepreneurship, trending tech topics">
     <meta name="revisit-after" content="1 hour">
     <link rel="stylesheet" type="text/css" media="screen" href="/static/css/basic.css"/>
@@ -133,7 +133,7 @@
                             <td width="auto" valign="middle">
                                 <span class="item_title">
                                     
-                                    <a href=" https://www.easypost.com/jobs " rel="nofollow">EasyPost is hiring everyone</a>
+                                    <a href=" https://www.easypost.com/jobs " rel="nofollow">EasyPost is hiring</a>
                                     
                                 </span>
                                 <div class="sep5"></div>
@@ -552,7 +552,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1529992810" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1529993408" id="pageUpdateTimestamp"></strong>
         </div>
         <div style="height: 100px; width: 100%;">
         </div>
