--- a/jobs/index.html
+++ b/jobs/index.html
@@ -10,7 +10,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="mobile-web-app-capable" content="yes"/>
     <title>Heikers - trending topics among the tech community and hackers</title>
-    <meta name="Description" CONTENT="Starcity (YC S16) Is Hiring – Product Manager. Gusto is hiring full-stack developers in SF and Denver. SnapEDA is hiring a lead software engineer in SF. $10K/successful Referral –  Smarking (YC W15) Is Hiring Sr. Front End Eng in SF. Atrium W18 – Democratizing Legal Services – Sr Software Engineer, FrontEnd. Cofactor Genomics (YC S15) Is Hiring an Account Executive (Sales)">
+    <meta name="Description" CONTENT="Starcity (YC S16) Is Hiring a Product Manager. Gusto is hiring full-stack developers in SF and Denver. SnapEDA is hiring a lead software engineer in SF. $10K/successful Referral –  Smarking (YC W15) Is Hiring Sr. Front End Eng in SF. Atrium W18 – Democratizing Legal Services – Sr Software Engineer, FrontEnd. Cofactor Genomics (YC S15) Is Hiring an Account Executive (Sales)">
     <meta name="keywords" content="hackers, heikers, startup, venture capital, entrepreneur and entrepreneurship, trending tech topics">
     <meta name="revisit-after" content="1 hour">
     <link rel="stylesheet" type="text/css" media="screen" href="/static/css/basic.css"/>
@@ -133,7 +133,7 @@
                             <td width="auto" valign="middle">
                                 <span class="item_title">
                                     
-                                    <a href=" https://starcity.com/careers/4b358bb7-44ec-41a6-ac16-947fc444ec11 " rel="nofollow">Starcity (YC S16) Is Hiring – Product Manager</a>
+                                    <a href=" https://starcity.com/careers/4b358bb7-44ec-41a6-ac16-947fc444ec11 " rel="nofollow">Starcity (YC S16) Is Hiring a Product Manager</a>
                                     
                                 </span>
                                 <div class="sep5"></div>
@@ -552,7 +552,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1530163208" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1530163812" id="pageUpdateTimestamp"></strong>
         </div>
         <div style="height: 100px; width: 100%;">
         </div>
