--- a/top-questions-and-answers/page2.html
+++ b/top-questions-and-answers/page2.html
@@ -393,7 +393,7 @@
                             <td width="auto" valign="middle">
                                 <span class="item_title">
                                     
-                                    <a href=" https://news.ycombinator.com/item?id=17407634 " rel="nofollow">Teaching programming in computational biology</a>
+                                    <a href=" https://news.ycombinator.com/item?id=17407634 " rel="nofollow">Teaching programming in computational biology?</a>
                                     
                                 </span>
                                 <div class="sep5"></div>
@@ -556,7 +556,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1530163812" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1530164412" id="pageUpdateTimestamp"></strong>
         </div>
         <div style="height: 100px; width: 100%;">
         </div>
