--- a/jobs/index.html
+++ b/jobs/index.html
@@ -10,7 +10,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="mobile-web-app-capable" content="yes"/>
     <title>Heikers - trending topics among the tech community and hackers</title>
-    <meta name="Description" CONTENT="Hiring engineers to help change education at  Clever (YC S12). Mimir (YC S15) – helping instructors teach CS – hiring Frontend in Indianapolis. Flexport is hiring a head of data. Remix is hiring Software Engineers and Managers to build more livable cities. Starcity (YC S16) Is Hiring a Product Manager. Gusto is hiring full-stack developers in SF and Denver">
+    <meta name="Description" CONTENT="Clever (YC S12) is hiring engineers to help change education. Mimir (YC S15) – helping instructors teach CS – hiring Frontend in Indianapolis. Flexport is hiring a head of data. Remix is hiring Software Engineers and Managers to build more livable cities. Starcity (YC S16) Is Hiring a Product Manager. Gusto is hiring full-stack developers in SF and Denver">
     <meta name="keywords" content="hackers, heikers, startup, venture capital, entrepreneur and entrepreneurship, trending tech topics">
     <meta name="revisit-after" content="1 hour">
     <link rel="stylesheet" type="text/css" media="screen" href="/static/css/basic.css"/>
@@ -133,7 +133,7 @@
                             <td width="auto" valign="middle">
                                 <span class="item_title">
                                     
-                                    <a href=" https://clever.com/about/jobs/software-engineer#gh_jid=5889 " rel="nofollow">Hiring engineers to help change education at  Clever (YC S12)</a>
+                                    <a href=" https://clever.com/about/jobs/software-engineer#gh_jid=5889 " rel="nofollow">Clever (YC S12) is hiring engineers to help change education</a>
                                     
                                 </span>
                                 <div class="sep5"></div>
@@ -552,7 +552,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1530257412" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1530258013" id="pageUpdateTimestamp"></strong>
         </div>
         <div style="height: 100px; width: 100%;">
         </div>
