--- a/top-questions-and-answers/index.html
+++ b/top-questions-and-answers/index.html
@@ -10,7 +10,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="mobile-web-app-capable" content="yes"/>
     <title>Heikers - trending topics among the tech community and hackers</title>
-    <meta name="Description" CONTENT="What is one “vim” trick most people don't know?. What are the things that you have automated in your personal life?. My company is being acquired. Should I move from CA to NV prior signing?. Best resources for teaching my 8 year old to code. Why is hackernews so old-fashioned?. What's the best documentation you've ever read?">
+    <meta name="Description" CONTENT="What is one Vim trick most people don't know?. What are the things that you have automated in your personal life?. My company is being acquired. Should I move from CA to NV prior signing?. Best resources for teaching my 8 year old to code. Why is hackernews so old-fashioned?. What's the best documentation you've ever read?">
     <meta name="keywords" content="hackers, heikers, startup, venture capital, entrepreneur and entrepreneurship, trending tech topics">
     <meta name="revisit-after" content="1 hour">
     <link rel="stylesheet" type="text/css" media="screen" href="/static/css/basic.css"/>
@@ -133,7 +133,7 @@
                             <td width="auto" valign="middle">
                                 <span class="item_title">
                                     
-                                    <a href=" https://news.ycombinator.com/item?id=17422516 " rel="nofollow">What is one “vim” trick most people don't know?</a>
+                                    <a href=" https://news.ycombinator.com/item?id=17422516 " rel="nofollow">What is one Vim trick most people don't know?</a>
                                     
                                 </span>
                                 <div class="sep5"></div>
@@ -146,7 +146,7 @@
                                             href="https://news.ycombinator.com/user?id=wawhal">wawhal</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1530248383"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    11 points
+                                    12 points
                                 </span>
                             </td>
                         </tr>
@@ -552,7 +552,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1530258013" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1530258608" id="pageUpdateTimestamp"></strong>
         </div>
         <div style="height: 100px; width: 100%;">
         </div>
