--- a/jobs/index.html
+++ b/jobs/index.html
@@ -10,7 +10,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="mobile-web-app-capable" content="yes"/>
     <title>Heikers - trending topics among the tech community and hackers</title>
-    <meta name="Description" CONTENT="Iris Automation Is Hiring a C++ Engineer – Self-Flying Drones. Human  Interest (YC S15) is hiring a Product Manager who likes personal finance. Head of Product opening at OneSignal. Willing (YC S15) Is Hiring Front-End Engineers. Come work with a team of badass women and men – The Muse is hiring an Eng Manager. Clever (YC S12) is hiring engineers to help change education">
+    <meta name="Description" CONTENT="Iris Automation Is Hiring a C++ Engineer to Work on Self-Flying Drones. Human  Interest (YC S15) is hiring a Product Manager who likes personal finance. Head of Product opening at OneSignal. Willing (YC S15) Is Hiring Front-End Engineers. Come work with a team of badass women and men – The Muse is hiring an Eng Manager. Clever (YC S12) is hiring engineers to help change education">
     <meta name="keywords" content="hackers, heikers, startup, venture capital, entrepreneur and entrepreneurship, trending tech topics">
     <meta name="revisit-after" content="1 hour">
     <link rel="stylesheet" type="text/css" media="screen" href="/static/css/basic.css"/>
@@ -133,7 +133,7 @@
                             <td width="auto" valign="middle">
                                 <span class="item_title">
                                     
-                                    <a href=" http://www.irisonboard.com/careers/ " rel="nofollow">Iris Automation Is Hiring a C++ Engineer – Self-Flying Drones</a>
+                                    <a href=" http://www.irisonboard.com/careers/ " rel="nofollow">Iris Automation Is Hiring a C++ Engineer to Work on Self-Flying Drones</a>
                                     
                                 </span>
                                 <div class="sep5"></div>
@@ -552,7 +552,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1530391210" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1530391812" id="pageUpdateTimestamp"></strong>
         </div>
         <div style="height: 100px; width: 100%;">
         </div>
