--- a/top-product-shows/page3.html
+++ b/top-product-shows/page3.html
@@ -10,7 +10,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="mobile-web-app-capable" content="yes"/>
     <title>Heikers - trending topics among the tech community and hackers</title>
-    <meta name="Description" CONTENT="Uplink v0.6 Released: Build Reusable Objects for Consuming Web APIs. Shamir Secret Sharing in Java 11+. Nethack as a Screensaver. Interactive Portraits with Speech Synthesis. Birthbook – Never forget birthdays again. Startup Jobs – Search job openings at 1,000s of startups">
+    <meta name="Description" CONTENT="Uplink – Build Reusable Objects for Consuming Web APIs. Shamir Secret Sharing in Java 11+. Nethack as a Screensaver. Interactive Portraits with Speech Synthesis. Birthbook – Never forget birthdays again. Startup Jobs – Search job openings at 1,000s of startups">
     <meta name="keywords" content="hackers, heikers, startup, venture capital, entrepreneur and entrepreneurship, trending tech topics">
     <meta name="revisit-after" content="1 hour">
     <link rel="stylesheet" type="text/css" media="screen" href="/static/css/basic.css"/>
@@ -133,7 +133,7 @@
                             <td width="auto" valign="middle">
                                 <span class="item_title">
                                     
-                                    <a href=" https://github.com/prkumar/uplink " rel="nofollow">Uplink v0.6 Released: Build Reusable Objects for Consuming Web APIs</a>
+                                    <a href=" https://github.com/prkumar/uplink " rel="nofollow">Uplink – Build Reusable Objects for Consuming Web APIs</a>
                                     
                                 </span>
                                 <div class="sep5"></div>
@@ -556,7 +556,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1536903038" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1536903631" id="pageUpdateTimestamp"></strong>
         </div>
         <div style="height: 100px; width: 100%;">
         </div>
