--- a/top-stories/daily/page6.html
+++ b/top-stories/daily/page6.html
@@ -10,7 +10,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="mobile-web-app-capable" content="yes"/>
     <title>Heikers - trending topics among the tech community and hackers</title>
-    <meta name="Description" CONTENT="New cold boot attack affects “nearly all modern computers”. GCHQ data collection violated human rights, Strasbourg court rules. Shards Vue – Free Vue UI kit with a sleek and modern design. U.S. Mobile Giants Want to Be Your Online Identity. Security flaw in ‘nearly all’ modern PCs and Macs exposes encrypted data. AirConsole offers over 100 browser-based games controlled by smartphones">
+    <meta name="Description" CONTENT="New cold boot attack affects “nearly all modern computers”. GCHQ data collection violated human rights, Strasbourg court rules. Shards Vue – Free Vue UI kit with a sleek and modern design. U.S. Mobile Giants Want to Be Your Online Identity. Security flaw in ‘nearly all’ modern PCs and Macs exposes encrypted data. AirConsole – Play multiplayer games together">
     <meta name="keywords" content="hackers, heikers, startup, venture capital, entrepreneur and entrepreneurship, trending tech topics">
     <meta name="revisit-after" content="1 hour">
     <link rel="stylesheet" type="text/css" media="screen" href="/static/css/basic.css"/>
@@ -285,7 +285,7 @@
                             <td width="auto" valign="middle">
                                 <span class="item_title">
                                     
-                                    <a href=" https://www.airconsole.com/welcome " rel="nofollow">AirConsole offers over 100 browser-based games controlled by smartphones</a>
+                                    <a href=" https://www.airconsole.com/welcome " rel="nofollow">AirConsole – Play multiplayer games together</a>
                                     
                                 </span>
                                 <div class="sep5"></div>
@@ -342,7 +342,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1536903038" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1536903631" id="pageUpdateTimestamp"></strong>
         </div>
         <div style="height: 100px; width: 100%;">
         </div>
