--- a/top-questions-and-answers/page6.html
+++ b/top-questions-and-answers/page6.html
@@ -10,7 +10,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="mobile-web-app-capable" content="yes"/>
     <title>Heikers - trending topics among the tech community and hackers</title>
-    <meta name="Description" CONTENT="Could cryptographically verified testimony replace audio and video?. Recurring payment provider fees at 10-15M/yr?. Blogs Similiar to the Old New Thing but for Linux?. Do you use bug finding tools?. Where to find a business or life coach? Seriously stuck, need help. How to Promote a Competition?">
+    <meta name="Description" CONTENT="Could cryptographically verified testimony replace audio and video?. Recurring payment provider fees at 10-15M/yr?. Blogs Similiar to the Old New Thing but for Linux?. What do you think of bug finding tools?. Where to find a business or life coach? Seriously stuck, need help. How to Promote a Competition?">
     <meta name="keywords" content="hackers, heikers, startup, venture capital, entrepreneur and entrepreneurship, trending tech topics">
     <meta name="revisit-after" content="1 hour">
     <link rel="stylesheet" type="text/css" media="screen" href="/static/css/basic.css"/>
@@ -211,7 +211,7 @@
                             <td width="auto" valign="middle">
                                 <span class="item_title">
                                     
-                                    <a href=" https://news.ycombinator.com/item?id=17985932 " rel="nofollow">Do you use bug finding tools?</a>
+                                    <a href=" https://news.ycombinator.com/item?id=17985932 " rel="nofollow">What do you think of bug finding tools?</a>
                                     
                                 </span>
                                 <div class="sep5"></div>
@@ -398,7 +398,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1536922835" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1536923431" id="pageUpdateTimestamp"></strong>
         </div>
         <div style="height: 100px; width: 100%;">
         </div>
