--- a/top-stories/halfweek/page2.html
+++ b/top-stories/halfweek/page2.html
@@ -493,7 +493,7 @@
                             <td width="auto" valign="middle">
                                 <span class="item_title">
                                     
-                                    <a href=" http://blog.conceptnet.io/posts/2017/how-to-make-a-racist-ai-without-really-trying/ " rel="nofollow">How to make a racist AI without really trying (2017)</a>
+                                    <a href=" http://blog.conceptnet.io/posts/2017/how-to-make-a-racist-ai-without-really-trying/ " rel="nofollow">Making a racist AI without really trying (2017)</a>
                                     
                                 </span>
                                 <div class="sep5"></div>
@@ -506,7 +506,7 @@
                                             href="https://news.ycombinator.com/user?id=spatten">spatten</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1537570455"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    170 points
+                                    174 points
                                 </span>
                             </td>
                         </tr>
@@ -578,7 +578,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1537589446" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1537590052" id="pageUpdateTimestamp"></strong>
         </div>
         <div style="height: 100px; width: 100%;">
         </div>
